--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -24,13 +24,12 @@
   <%= submit_tag("Search") %>
 <% end %>
 
-<% @cards_to_display.each do |card| %>
+<% @cards.each do |card| %>
 		<div>
 			<p>Card Name: <%= card['name'] %></p>
 			<p>Mana Cost: <%= card['manaCost'] %></p>
 			<p>Types: <%= card['types'] %></p>
 			<p>Card Text: <%= card['text'] %></p>
-			<p><%=  http://magictcgprices.appspot.com/api/tcgplayer/price.json?cardname=Tarmogoyf&cardset=Modern%20Masters %></p>
 		</div>
 <% end %>
 
