corrected dci number field on the users/new page from a password field to text field

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,7 +25,7 @@
   </div>
    <div class="field">
     <%= f.label :DCI_Number %><br/>
-    <%= f.password_field :dci_number %>
+    <%= f.text_field :dci_number %>
   </div>
   <div class="field">
     <%= f.label :password %><br/>
