--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class = "titlediv">
+<img src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
+MTG TRADE BINDER!!!!
+<img src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
 
-<%= yield %>
+</div>
+<div class = "sidebar"> 
+	<div class =  "sidebarContent">
+		<img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
+		WELCOME
+		<img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
+	</div>
 
+
+</div> 
+<div class = 'content'>
+	<%= yield %>
+</div>
 </body>
 </html>
