--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -8,7 +8,28 @@
 		  <%= ff.text_field :name %>
 	  	</div>
 	  	<div>
-	  		<p>Card Type: <%= ff.select :type, [['',''],['Instant','Instant']] %></p>
+	  		<% type_options = 
+	  						[
+	  							['',''],
+	  							['Artifact','Artifact'],
+								['Basic','Basic'],
+								['Conspiracy','Conspiracy'],
+								['Creature','Creature'],
+								['Enchantment','Enchantment'],
+								['Instant','Instant'],
+								['Land','Land'],
+								['Legendary','Legendary'],
+								['Ongoing','Ongoing'],
+								['Phenomenon','Phenomenon'],
+								['Plane','Plane'],
+								['Planeswalker','Planeswalker'],
+								['Scheme','Scheme'],
+								['Snow','Snow'],
+								['Tribal','Tribal'],
+								['Vanguard','Vanguard'],
+								['World','World']
+							] %>
+	  		<p>Card Type: <%= ff.select :type, type_options %></p>
 	  	</div>
 	  	<div>
 		  <%= ff.label :subtypes, "Card subtypes:" %>
@@ -16,22 +37,25 @@
 	  	</div>
 	  	<div>
 		  <p>CMC: 
-		  	<%= ff.select :cmcmod, [['<','lt'],['<=','lte'],['=','e'], ['>=','gte'],['>','gt']] %>
-			<%= ff.select :cmc, [['',''], ['1',1],['2',2],['3',3],['4',4],['5',5],['6',6],['7',7]] %></p>
+		  	<% cmcmod_options = [['<','lt'],['<=','lte'],['=','e'], ['>=','gte'],['>','gt']]%>
+		  	<%= ff.select :cmcmod, cmcmod_options %>
+		  	<%= ff.number_field :cmc %>
+		  </p>
 	  	</div>
   	<% end %>
   <%= submit_tag("Search") %>
 <% end %>
 
-<% @cards.each do |card| %>
-		<div>
-			<p>Card Name: <%= card['name'] %></p>
-			<p>Mana Cost: <%= card['manaCost'] %></p>
-			<p>Types: <%= card['types'] %></p>
-			<p>Card Text: <%= card['text'] %></p>
-		</div>
+<% if @cards.respond_to? :count %>
+	<% @cards.each do |card| %>
+			<div>
+				<p>Card Name: <%= card['name'] %>  <%= card['manaCost'] %></p>
+				<p><%= card['type'] %></p>
+				<p>Card Text: <%= card['text'] %></p>
+				<p><%= card['flavor'] %></p>
+			</div>
+	<% end %>
 <% end %>
-
 
 
 
