Can search by Artist

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,51 +1,10 @@
 
 <h2>Search for Cards</h2>
 
-<%= form_tag("/cards", method: "get") do %>
-	<%= fields_for :card_fields do |ff| %>
-	  	<div>
-		  <%= ff.label :name, "Card Name:" %>
-		  <%= ff.text_field :name %>
-	  	</div>
-	  	<div>
-	  		<% type_options = 
-	  						[
-	  							['',''],
-	  							['Artifact','Artifact'],
-								['Basic','Basic'],
-								['Conspiracy','Conspiracy'],
-								['Creature','Creature'],
-								['Enchantment','Enchantment'],
-								['Instant','Instant'],
-								['Land','Land'],
-								['Legendary','Legendary'],
-								['Ongoing','Ongoing'],
-								['Phenomenon','Phenomenon'],
-								['Plane','Plane'],
-								['Planeswalker','Planeswalker'],
-								['Scheme','Scheme'],
-								['Snow','Snow'],
-								['Tribal','Tribal'],
-								['Vanguard','Vanguard'],
-								['World','World']
-							] %>
-	  		<p>Card Type: <%= ff.select :type, type_options %></p>
-	  	</div>
-	  	<div>
-		  <%= ff.label :subtypes, "Card subtypes:" %>
-		  <%= ff.text_field :subtypes %>
-	  	</div>
-	  	<div>
-		  <p>CMC: 
-		  	<% cmcmod_options = [['<','lt'],['<=','lte'],['=','e'], ['>=','gte'],['>','gt']]%>
-		  	<%= ff.select :cmcmod, cmcmod_options %>
-		  	<%= ff.number_field :cmc %>
-		  </p>
-	  	</div>
-  	<% end %>
-  <%= submit_tag("Search") %>
-<% end %>
+<%= render '/cards/search' %>
 
+<!-- if statement needs to be fixed, this is a lazy hack to get it to work
+     if only a single card is returned -->
 <% if @cards.respond_to? :count %>
 	<% @cards.each do |card| %>
 			<div>
@@ -53,6 +12,7 @@
 				<p><%= card['type'] %></p>
 				<p>Card Text: <%= card['text'] %></p>
 				<p><%= card['flavor'] %></p>
+				<p><%= card['artist'] %></p>
 			</div>
 	<% end %>
 <% end %>
