--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
-<h1>Welcome Plains Walker <%= @place_holder_user.first_name %> <%= @place_holder_user.last_name %></h1>
+<h1>Welcome Planeswalker <%= @place_holder_user.first_name %> <%= @place_holder_user.last_name %></h1>
 
+<h2>Your cards</h2>
+<% @place_holder_user.tradeable_cards.each do |card| %>
+	<%= card.name %>
 
+<% end %>
+
+<h2>Wishlist</h2>
+<% @place_holder_user.wanted_cards.each do |card| %>
+	<%= card.name %>
+
+<% end %>
