Added functionality to add card to users tradeable list, it's ugly but it works

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -14,6 +14,9 @@
 				<p><%= card['flavor'] %></p>
 				<p><%= card['artist'] %></p>
 			</div>
+			<div>
+				<%= link_to "Add Card to Binder", "users/#{current_user.id}/add_to_tradeable/#{card.id}", :method => :put %>
+			</div>
 	<% end %>
 <% end %>
 
