added geolocation shit to user controller, including location history, added whereami action to user controller, added a post that gets cordinates using the navigator geolocation method in users js.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
       <% else %>
         <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
+      <%= current_user.coordinates %> 
     </p>
 	</div>
 
