--- a/app/views/cards/_search.html.erb
+++ b/app/views/cards/_search.html.erb
@@ -1,3 +1,4 @@
+<div class='search-form' %>
 <%= form_tag("/cards", method: "get") do %>
 	<%= fields_for :card_fields do |ff| %>
 	  	<div>
@@ -45,5 +46,9 @@
 	  		</p>
 	  	</div>
   	<% end %>
-  <%= submit_tag("Search") %>
+  	<div class='submit-button'>
+  		<%= submit_tag("Search") %>
+  	</div>
 <% end %>
+
+</div>
