--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,35 +14,30 @@
 </div>
 
 
-
-
-
-
-		
-	
-
-
 <div class = 'content'>
 
-<img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
-    WELCOME
-    <img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
-        <% if flash[:notice] %>
-      <p id="notice"><%= flash[:notice] %></p>
-    <% end %>
-    <% if flash[:alert] %>
-      <p id="alert"><%= flash[:alert] %></p>
-    <% end %>
-    
-    <p class="userinfo">
-      <% if current_user %>
-        Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-      <% else %>
-        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-      <% end %>
-      <%= current_user.coordinates %> 
-    </p>
-	<%= yield %>
+  <img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
+  WELCOME
+  <img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
+  <% if flash[:notice] %>
+    <p id="notice"><%= flash[:notice] %></p>
+  <% end %>
+  <% if flash[:alert] %>
+    <p id="alert"><%= flash[:alert] %></p>
+  <% end %>
+
+  <p class="userinfo">
+  
+  <% if current_user %>
+    Signed in as <%= current_user.email %>. at <%= current_user.coordinates %> 
+ <%= link_to "Log out", session_path("current"), :method => :delete %>
+  <% else %>
+    <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+  <% end %>
+
+  </p>
+  <%= yield %>
+
 </div>
 </body>
 </html>
