put the card search form in a proper table for better styling/css

--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -8,6 +8,7 @@
 	border-radius: 10px; 
 	background-color: #3E403B;
 	margin: 10px;
+	width: 20%;
 }
 
 .submit-button {
@@ -60,6 +61,7 @@
 	margin-bottom: auto;
 }
 
-.card-data > p {
+#card_fields_name {
 
 }
+
