--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-body {
+/*body {
     background-image: url("http://i41.tinypic.com/2el9mqf.jpg");
     background-color: #cccccc;
 }
@@ -41,4 +41,163 @@ body {
 	color: white;
 	   -webkit-text-stroke: 1px black;
 
-		}
+		}*/
+
+		h1, h2, h3, h4, h5, h6, p {
+	margin: 0;
+	padding: 0;
+}
+
+p {
+	margin: 0 0 1em 0;
+	font-size: 93%;
+	line-height: 1.5em;
+}
+
+body {
+	font-family: Helvetica, Arial, sans-serif;
+	padding: 0;
+	margin: 0;
+	background-color: #3f3f3f;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	margin: 0 0 10px 0;
+}
+
+img.card {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+	max-width: 256px ;
+}
+/* Section Inner */
+div.section-inner {
+	max-width: 1100px;
+	padding: 0 25px;
+	margin: 0 auto;
+}
+
+/* Header */
+div.header {
+	background-color: #E9E9E9;
+	padding: 40px 0;
+}
+
+/* Navigation */
+div.nav {
+
+	background-color: #E9E9E9;
+	height:40% ;
+}
+
+div.nav ul {
+	margin: 0;
+	padding: 0;
+}	
+
+div.nav-button {
+	height: 40px;
+
+	text-align: center;
+	width: 25%;
+	
+	float: left;
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+	background-color: red;
+	font-size: 26px;
+}
+
+/* Body Content */
+div.body-content {
+	padding: 50px 0;
+	background-color: #FFF;
+}
+
+div.search-form {
+	background-color: teal;
+	padding: 5px, 5px, 5px, 5px;
+}
+div.search-form h1{
+	text-align: center;
+}
+
+div.form_box
+{
+	color: red;
+}
+
+/**** for display ***
+
+/* Thirds */
+div.thirds {
+	
+	padding-bottom: 50px;
+}
+
+div.one-third {
+	background-color: maroon;
+	width: 30%;
+	float: left;
+	margin-right: 5%;
+}
+
+div.one-third-last {
+	margin: 0;
+}
+
+/* Main Column */
+div.main {
+	width: 65%;
+	float: left;
+	margin-right: 5%;
+}
+
+/* Side Column */
+div.side {
+	width: 30%;
+	float: left;
+}
+
+
+/**** END OF DISPLAY *** */
+
+/* Footer */
+div.footer {
+	background-color: #3f3f3f;
+	color: #FFF;
+	padding: 15px 0;
+	text-align: center;
+}
+
+
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { *zoom: 1; }
+
+@media screen and (max-width: 900px) {
+	
+}
+
+@media screen and (max-width: 500px) {
+	
+	div.nav ul li {
+		width: 50%;
+		font-size: 85%;
+	}
+	
+	div.mobile-collapse {
+		width: auto;
+		float: none;
+		margin-right: 0;
+	}
+	
+	.hide-mobile {
+		display: none;
+	}
+		
+}
