erased previously html, added head with title, then a horizontal index bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,21 +5,41 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+   <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)">
+    <link rel="stylesheet" href="css/cellyresponsive.css" media="screen and (max-width: 500px)">
+
 </head>
 <body>
-<div class = "titlediv">
-	<img src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
-	MTG TRADE BINDER!!!!
-	<img src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
 
-</div>
-
-
+  <div class="header"><div class="section-inner">
+    <h1>MTG TRADE BINDER</h1>
+    <p class="userinfo">
+  
+    <% if current_user %>
+      Signed in as <%= current_user.email %>. at <%= current_user.coordinates %> 
+     <%= link_to "Log out", session_path("current"), :method => :delete %>
+    <% else %>
+     <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+    <% end %>
+  </div></div><!--/header-->
+  
+  <!-- nav -->
+  <div class="nav"><div class="section-inner">
+    <!-- <ul class="clearfix"> -->
+      <div class="nav-button"><a href="#">SEARCH</a></div>
+      <div class="nav-button"><a href="#">TRADE BINDER</a></div>
+      <div class="nav-button"><a href="#">WISH LIST</a></div>
+      <div class="nav-button"><a href="#">PLANES WALKER</a></div>
+<!--    </ul>
+ -->  </div></div><!--/nav-->
 <div class = 'content'>
 
-  <img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
-  WELCOME
-  <img src = "http://www.picgifs.com/graphics/t/torch/graphics-torch-617948.gif">
   <% if flash[:notice] %>
     <p id="notice"><%= flash[:notice] %></p>
   <% end %>
@@ -30,19 +50,15 @@
    <li><%= link_to "User Profile", user_path(current_user.id) %></li>
    <li><%= link_to "Search Cards", cards_path %></li>
 
-  <p class="userinfo">
   
-  <% if current_user %>
-    Signed in as <%= current_user.email %>. at <%= current_user.coordinates %> 
- <%= link_to "Log out", session_path("current"), :method => :delete %>
-  <% else %>
-    <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-  <% end %>
 
   </p>
-  <%= yield %>
 
 
 </div>
-</body>
+
+<%= yield %>
+  
+  <!-- body-content -->
+  
 </html>
