--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -1,24 +1,39 @@
-<% @cards.each do |card| %>
-		<div class='card-display'>
-			<div class='card-container'>
-				<div class='card-image'>
-					<img src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg">
-				</div>
-				<div class='card-data'>
-					<p>Card Name: <%= card['name'] %>  <%= card['manaCost'] %></p>
-					<p><%= card['type'] %></p>
-					<p>Card Text: <%= card['text'] %></p>
-					<p><%= card['flavor'] %></p>
-					<p><%= card['artist'] %></p>
-				</div>
-			</div>
-			<div class='list-links'>
-				<div class='binder-link'>
-					<%= link_to "Add Card to Binder", add_to_tradeable_path(card.id), :method => :put %>
-				</div>
-				<div class='binder-link'>
-					<%= link_to "Add Card to Wishlist", add_to_wanted_path(card.id), :method => :put %>
-				</div>
-			</div>
-		</div>
+
+		
+
+<% @cards.each_slice(3) do |card| %>
+<div class="body-content"><div class="section-inner">
+		
+			<!-- thirds -->
+			<div class="thirds clearfix">
+				
+				<!-- one-third -->
+				<div class="one-third one-third-first mobile-collapse">
+					<img class="card" src="http://mtgimage.com/setname/<%="#{card[0].card_set.name}"%>/<%= "#{card[0].name}" %>.jpg" alt="A bird on a fence" />
+					<h2>Card Name: <%= card[0]['name'] %>  <%= card[0]['manaCost'] %> </h2>
+					<p><%= card[0]['type'] %></p> <br/>
+					<p>Card Text: <%= card[0]['text'] %> </p> <br/>
+					<p><%= card[0]['flavor'] %></p> <br/>
+					<p><%= card[0]['artist'] %></p> <br/>
+				</div><!--/one-third-->
+				
+				<!-- one-third  -->
+				<div class="one-third one-third-second  mobile-collapse">
+					<img class="card" src="http://mtgimage.com/setname/<%="#{card[1].card_set.name}"%>/<%= "#{card[1].name}" %>.jpg" alt="A bird on a fence" />
+					<h2>Card Name: <%= card[1]['name'] %>  <%= card[1]['manaCost'] %> </h2>
+					<p><%= card[1]['type'] %></p> <br/>
+					<p>Card Text: <%= card[1]['text'] %> </p> <br/>
+					<p><%= card[1]['flavor'] %></p> <br/>
+					<p><%= card[1]['artist'] %></p> <br/>
+				</div><!--/one-third-->
+				 
+				<!-- one-third -->
+				<div class="one-third one-third-last mobile-collapse">
+					<img class="card" src="http://mtgimage.com/setname/<%="#{card[2].card_set.name}"%>/<%= "#{card[2].name}" %>.jpg" alt="A bird on a fence" />
+					<h2>Card Name: <%= card[2]['name'] %>  <%= card[2]['manaCost'] %> </h2>
+					<p><%= card[2]['type'] %></p> <br/>
+					<p>Card Text: <%= card[2]['text'] %> </p> <br/>
+					<p><%= card[2]['flavor'] %></p> <br/>
+					<p><%= card[2]['artist'] %></p> <br/>
+				</div><!--/one-third-->
 <% end %>
