--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,21 @@
 <body>
 
   <div class="header"><div class="section-inner">
-    <h1>MTG TRADE BINDER</h1>
+   
+    <img class = "skulls" src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
+    <div class ="title"> 
+      <h1>MTG TRADE BINDER</h1>
+      <% if current_user %>
+        Signed in as <%= current_user.email %>. <br/>at <%= current_user.coordinates %> 
+       <%= link_to "Log out", session_path("current"), :method => :delete %>
+      <% else %>
+       <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+      <% end %>
+    </div>
+    <img class = "skulls" src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
+
     <p class="userinfo">
   
-    <% if current_user %>
-      Signed in as <%= current_user.email %>. at <%= current_user.coordinates %> 
-     <%= link_to "Log out", session_path("current"), :method => :delete %>
-    <% else %>
-     <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-    <% end %>
   </div></div><!--/header-->
   
   <!-- nav -->
