--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,15 +16,15 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :First_Name %><br/>
+    <%= f.label :first_Name %><br/>
     <%= f.text_field :first_name %>
   </div>
   <div class="field">
-    <%= f.label :Last_name %><br/>
+    <%= f.label :last_name %><br/>
     <%= f.text_field :last_name %>
   </div>
    <div class="field">
-    <%= f.label :DCI_Number %><br/>
+    <%= f.label :dci_Number %><br/>
     <%= f.text_field :dci_number %>
   </div>
   <div class="field">
