--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MtgJsonApi</title>
+  <title>MTG TRADE BINDER DELUXXE</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
    <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)">
-    <link rel="stylesheet" href="css/cellyresponsive.css" media="screen and (max-width: 500px)">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
   <div class="header"><div class="section-inner">
    
-    <img class = "skulls" src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
     <div class ="title"> 
       <h1>MTG TRADE BINDER</h1>
       <% if current_user %>
@@ -29,7 +26,6 @@
        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
     </div>
-    <img class = "skulls" src = http://bestanimations.com/Humans/Skulls/Skull-09-june.gif>
 
     <p class="userinfo">
   
@@ -38,10 +34,10 @@
   <!-- nav -->
   <div class="nav"><div class="section-inner">
     <!-- <ul class="clearfix"> -->
-      <div class="nav-button"><%= link_to "SEARCH", cards_path %></div>
-      <div class="nav-button"><%= link_to "TRADE BINDER", cards_path %></div>
-      <div class="nav-button"><%= link_to "WISH LIST", cards_path %></div>
-      <div class="nav-button"><%= link_to "PLANES WALKA", user_path(current_user.id) %></div>
+      <div class="nav-button nav-button-search"><%= link_to image_tag( src="http://www.clker.com/cliparts/a/4/a/a/13498043761678328666Zoom%20Enabled.svg"), cards_path%></p></div>
+      <div class="nav-button  nav-button-tradebinder"><%= link_to image_tag(src= "http://www.clker.com/cliparts/t/x/a/6/X/j/folder.svg"), cards_path%></p></div>
+      <div class="nav-button nav-button-wishlist"><%= link_to image_tag(src = "http://www.clker.com/cliparts/6/5/f/7/11970933791879152852johnny_automatic_sleeping_girl.svg"), cards_path%></p></div>
+      <div class="nav-button nav-button-planeswalker"><%= link_to image_tag(src = "http://www.clker.com/cliparts/5/b/9/8/11954222721516972319alien_wizard_fenn_03.svg"), user_path(current_user.id) %></p></div>
 <!--    </ul>
  -->  </div></div><!--/nav-->
 <div class = 'content'>
