--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,28 @@
-<h1>Welcome Planeswalker <%= @place_holder_user.first_name %> <%= @place_holder_user.last_name %></h1>
+<div class="section.inner">
+	<div class="body-content body-content-user">
+		<div class="id-section">
+			
+			<div class= "idcard">
+				<div class="idcard-user-name"><%= current_user.first_name %> <%= current_user.last_name %> </div>
+				<div class="idcard-user-info">
+					-Email: <%= current_user.email %> <br/>
+					-DCI: Number <%= current_user.dci_number %>
+				</div>
+					
+				<div class="idcard-user-picture"><img src= "http://images.starpulse.com/Photos/Previews/Allen-Toussaint-r01.jpg"></div> 				<!-- Replace with user.picture_id if we choose to implement feature -->
+				<div class="idcard-magic-card"><img src = "http://fc02.deviantart.net/fs71/f/2013/022/3/b/mtg_blank_white_card__by_growlydave-d5sco15.png"></div>
+	
+			</div>
+			
+			<h2>Your cards</h2>
+			
 
-<h2>Your cards</h2>
-<% current_user.tradeable_cards.each do |card| %>
-	<%= card.name %>
-	<%= link_to "Remove", remove_from_tradeable_path(card.id), method: :put %>
-	<br>
-<% end %>
-
-<h2>Wishlist</h2>
-<% current_user.wanted_cards.each do |card| %>
-	<%= card.name %>
-	<%= link_to "Remove", remove_from_wanted_path(card.id), method: :put %>
-	<br>
-
-<% end %>
+			<h2>Wishlist</h2>
+			<% current_user.wanted_cards.each do |card| %>
+				<%= card.name %>
+				<%= link_to "Remove", remove_from_wanted_path(card.id), method: :put %>
+				<br>
+			<% end %>
+		</div>
+	</div>
+</div>
