--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   <p class="userinfo">
   
   <% if current_user %>
-    Signed in as <%= current_user.email %>. at <%= current_user.coordinates %> 
+    Signed in as <%= current_user.email %>. at  
     <%= link_to "Log out", session_path("current"), :method => :delete %>
   <% else %>
     <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
