--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -1,48 +1,30 @@
-
-		
+	
 <div class="section-inner">
-	<% @cards.each_slice(3) do |card| %>
+	<% @cards.each_slice(3) do |cards| %>
 
 		<div class="body-content">
 			
 				<!-- thirds -->
 				<div class="thirds clearfix">
-					
-					<!-- one-third -->
-					<div class="one-third one-third-first mobile-collapse">
-						<img class="card" src="http://mtgimage.com/setname/<%="#{card[0].card_set.name}"%>/<%= "#{card[0].name}" %>.jpg" alt="A bird on a fence" />
-						<h2>Card Name: <%= card[0]['name'] %>  <%= card[0]['manaCost'] %> </h2>
-						<p><%= card[0]['type'] %></p> <br/>
-						<p>Card Text: <%= card[0]['text'] %> </p> <br/>
-						<p><%= card[0]['flavor'] %></p> <br/>
-						<p><%= card[0]['artist'] %></p> 
-						<p> <%= link_to "Add Card to Binder", add_to_tradeable_path(card[0].id), :method => :put %> </p> 					
-						<p><%= link_to "Add Card to Wishlist", add_to_wanted_path(card[0].id), :method => :put %></p> 
-					</div>
-				<!--/one-third-->
-					
-					<!-- one-third  -->
-					<div class="one-third one-third-second  mobile-collapse">
-						<img class="card" src="http://mtgimage.com/setname/<%="#{card[1].card_set.name}"%>/<%= "#{card[1].name}" %>.jpg" alt="A bird on a fence" />
-						<h2>Card Name: <%= card[1]['name'] %>  <%= card[1]['manaCost'] %> </h2>
-						<p><%= card[1]['type'] %></p> <br/>
-						<p>Card Text: <%= card[1]['text'] %> </p> <br/>
-						<p><%= card[1]['flavor'] %></p> <br/>
-						<p><%= card[1]['artist'] %></p> <br/>
-						<p> <%= link_to "Add Card to Binder", add_to_tradeable_path(card[1].id), :method => :put %> </p> 					
-						<p><%= link_to "Add Card to Wishlist", add_to_wanted_path(card[1].id), :method => :put %></p> 
-					</div><!--/one-third-->
-					 
-					<!-- one-third -->
-					<div class="one-third one-third-last mobile-collapse">
-						<img class="card" src="http://mtgimage.com/setname/<%="#{card[2].card_set.name}"%>/<%= "#{card[2].name}" %>.jpg" alt="A bird on a fence" />
-						<h2>Card Name: <%= card[2]['name'] %>  <%= card[2]['manaCost'] %> </h2>
-						<p><%= card[2]['type'] %></p> <br/>
-						<p>Card Text: <%= card[2]['text'] %> </p> <br/>
-						<p><%= card[2]['flavor'] %></p> <br/>
-						<p><%= card[2]['artist'] %></p> <br/>
-						<p> <%= link_to "Add Card to Binder", add_to_tradeable_path(card[2].id), :method => :put %> </p> 					
-						<p><%= link_to "Add Card to Wishlist", add_to_wanted_path(card[2].id), :method => :put %></p> 
-					</div><!--/one-third-->
+					<% i = 0 %>
+					<% cards.each do |card| %>
+						<% i += 1 %>
+						<% j = "first" if i == 1 %>
+						<% j = "second" if i == 2 %>
+						<% j = "last" if i == 3 %>
+						<div class="one-third one-third-<%= "#{j}" %> mobile-collapse">
+							<img class="card" src="http://mtgimage.com/setname/<%="#{card.card_set.name}"%>/<%= "#{card.name}" %>.jpg" alt="A bird on a fence" />
+							<h2>Card Name: <%= card['name'] %>  <%= card['manaCost'] %> </h2>
+							<p><%= card['type'] %></p> <br/>
+							<p>Card Text: <%= card['text'] %> </p> <br/>
+							<p><%= card['flavor'] %></p> <br/>
+							<p><%= card['artist'] %></p> 
+							<p> <%= link_to "Add Card to Binder", add_to_tradeable_path(card.id), :method => :put %> </p> 					
+							<p><%= link_to "Add Card to Wishlist", add_to_wanted_path(card.id), :method => :put %></p> 
+						</div>
+
+					<% end %>
+				</div><!--/one-third-->
+		</div>
 	<% end %>
 </div>
