--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class ="title"> 
       <h1>MTG TRADE BINDER</h1>
       <% if current_user %>
-        Signed in as <%= current_user.email %>. <br/>at <%= current_user.coordinates %> 
+        Signed in as <%= current_user.email %>. <br/>at <%= current_user.latitude %> <%= current_user.longitude %> 
        <%= link_to "Log out", session_path("current"), :method => :delete %>
       <% else %>
        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
