Updated views to add cards to wanted and trade list

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,14 +15,18 @@
 			</div>
 			
 			<h2>Your cards</h2>
-			
+				<% current_user.listed_cards.where(status: 1).to_a.uniq{|e| e.card_id }.each do |listed_card| %>
+					<%= current_user.listed_cards.where(card_id: listed_card.card_id).count %>
+					<%= listed_card.card.name %>
+					<br>
+				<% end %>			
 
 			<h2>Wishlist</h2>
-			<% current_user.wanted_cards.each do |card| %>
-				<%= card.name %>
-				<%= link_to "Remove", remove_from_wanted_path(card.id), method: :put %>
-				<br>
-			<% end %>
+				<% current_user.listed_cards.where(status: 0).to_a.uniq{|e| e.card_id }.each do |listed_card| %>
+					<%= current_user.listed_cards.where(card_id: listed_card.card_id).count %>
+					<%= listed_card.card.name %>
+					<br>
+				<% end %>
 		</div>
 	</div>
 </div>
