--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -20,8 +19,8 @@
     <div class ="title"> 
       <h1>MTG TRADE BINDER</h1>
       <% if current_user %>
-        Signed in as <%= current_user.email %>. <br/>at <%= current_user.coordinates %> 
-       <%= link_to "Log out", session_path("current"), :method => :delete %>
+        Signed in as <%= current_user.email %>. <br/>
+       <%= link_to "Log out", session_path(current_user.id), :method => :delete %>
       <% else %>
        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
